Fixed problem related to —enable-preview